# metatropics-epi2me

./: CITATION.cff  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml  setup.py
assets/: POD5.csv  POD5_wellID.csv  README.md
assets/metatropics_samplesheet/: __init__.py  __main__.py  samplesheet.py  twist.py
conf/: base.config  modules.config
lib/: Epi2meParams.groovy  HostReferences.groovy  NfcoreTemplate.groovy  VirasignDb.groovy  WorkflowMain.groovy  WorkflowMetatropics.groovy
modules/local/: fix_names.nf  samplesheet_check_metatropics.nf
modules/local/bcftools/: consensus.nf
modules/local/clair3/: postprocessing.nf  variants.nf
modules/local/dorado/: demultiplexing.nf  ont.nf
modules/local/fastplong/: main.nf
modules/local/rarefaction/: rarefaction.nf
modules/local/reads/: reads.nf
modules/local/virasign/: build_html.nf  classification.nf  prepare_db.nf
modules/nf-core/custom/dumpsoftwareversions/: main.nf  meta.yml
modules/nf-core/custom/dumpsoftwareversions/templates/: dumpsoftwareversions.py
modules/nf-core/minimap2/align/: main.nf
modules/nf-core/nanoplot/: main.nf
modules/nf-core/samtools/fastq/: main.nf  main2.nf
modules/nf-core/samtools/sort/: main.nf
workflows/: metatropics.nf
workflows/subworkflows/local/: host_mapping.nf  human_mapping.nf  input_check_metatropics.nf  subfix_names.nf
