[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metatropics-samplesheet"
version = "0.1.1"
description = "Metatropics samplesheet helper (FASTQ and POD5/fastq_pass CSV)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.7,<3.14"

[project.scripts]
metatropics_samplesheet = "metatropics_samplesheet.samplesheet:main"
metatropics-samplesheet = "metatropics_samplesheet.samplesheet:main"

[tool.setuptools]
package-dir = {"" = "assets"}

[tool.setuptools.packages.find]
where = ["assets"]